k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2p-app
  namespace: p2p-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: p2p-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: p2p-app
    spec:
      serviceAccountName: p2p-serviceaccount
      securityContext:
        runAsUser: 65532      # default non-root UID in distroless
        runAsGroup: 65532     # default non-root GID in distroless
        runAsNonRoot: true
        fsGroup: 65532        # this gives write permission to mounted volumes
      containers:
      - name: p2p-container
        image: myregistry.dockerdomain.com:5443/p2p:latest
        ports:
        - containerPort: 8080
          name: api
        - containerPort: 47500
          name: discovery
        - containerPort: 47100
          name: communication
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        volumeMounts:
          - mountPath: /app/ignite/work
            name: ignite-workdir
      volumes:
        - name: ignite-workdir
          emptyDir: {}
